--- a/queens-ha-master/nova-compute/templates/nova.conf.compute.j2
+++ b/queens-ha-master/nova-compute/templates/nova.conf.compute.j2
@@ -1,6 +1,4 @@
 [DEFAULT]
-osapi_compute_listen = {{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}
-metadata_listen = {{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}
 enabled_apis = osapi_compute,metadata
 transport_url = rabbit://openstack:{{ rabbitmq_pw }}@{{ controller1_ip_man }}:5672,openstack:{{ rabbitmq_pw }}@{{ controller2_ip_man }}:5672,openstack:{{ rabbitmq_pw }}@{{ controller3_ip_man }}:5672
 my_ip = {{ hostvars[inventory_hostname]['ansible_eth0']['ipv4']['address'] }}
@@ -9,7 +7,6 @@ firewall_driver = nova.virt.firewall.NoopFirewallDriver
 [api]
 auth_strategy = keystone
 [api_database]
-connection = mysql+pymysql://nova:{{ nova_dbpw }}@{{ vip }}/nova_api
 [barbican]
 [cache]
 [cells]
@@ -21,7 +18,6 @@ connection = mysql+pymysql://nova:{{ nova_dbpw }}@{{ vip }}/nova_api
 [cors]
 [crypto]
 [database]
-connection = mysql+pymysql://nova:{{ nova_dbpw }}@{{ vip }}/nova
 [devices]
 [ephemeral_storage_encryption]
 [filter_scheduler]
@@ -43,6 +39,7 @@ project_name = service
 username = nova
 password = {{ nova_pw }}
 [libvirt]
+virt_type = kvm
 [matchmaker_redis]
 [metrics]
 [mks]
@@ -56,8 +53,6 @@ region_name = RegionOne
 project_name = service
 username = neutron
 password = {{ neutron_pw }}
-service_metadata_proxy = true
-metadata_proxy_shared_secret = {{ metadata_secret }}
 [notifications]
 [osapi_v21]
 [oslo_concurrency]
@@ -83,7 +78,6 @@ password = {{ placement_pw }}
 [rdp]
 [remote_debug]
 [scheduler]
-discover_hosts_in_cells_interval = 300
 [serial_console]
 [service_user]
 [spice]
@@ -92,9 +86,10 @@ discover_hosts_in_cells_interval = 300
 [vendordata_dynamic_auth]
 [vmware]
 [vnc]
-enabled = true
-server_listen = {{ vip }}
+enabled = True
+server_listen = 0.0.0.0
 server_proxyclient_address = {{ vip }}
+novncproxy_base_url = http://{{ vip }}:6080/vnc_auto.html
 [workarounds]
 [wsgi]
 [xenserver]
